--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <h1>Matisse Bollen</h1>
         <nav>
             <ul>
-                <li><a href="#about">Wie ben ik</a></li>
+                <li><a href="#about">Over Mij</a></li>
                 <li><a href="#projects">Projecten</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -157,10 +157,10 @@
     </section>
 
     <section id="about">
-        <h2>Wie ben ik</h2>
+        <h2>Over Mij</h2>
         <div class="projects">
             <div class="project-card">
-             <h3>Wie ben ik</h3>
+             <h3>Over Mij</h3>
              <p>Hallo, ik ben Matisse Bollen. Ik ben een student die houdt van het bouwen van innovatieve oplossingen en het leren van nieuwe technologieën.</p>
             </div>
         </div>
