--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="project-card">
                 <h3>Andere Projecten</h3>
                 <p>Bekijk mijn andere subdomeinen:</p>
-                <a href="https://projects.jouwdomein.com" target="_blank" class="btn">Bekijk Projecten</a>
+                <a href="https://subdomeinen.mbits.be" target="_blank" class="btn">Bekijk Projecten</a>
             </div>
         </div>
     </section>
