--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="project-card">
                 <h3>Pihole</h3>
                 <p>Bekijk mijn Pihole:</p>
-                <a href="https://pihole.mbits.be" target="_blank"  class="btn">Bekijk Pihole</a>
+                <a href="https://pihole.mbits.be/admin" target="_blank"  class="btn">Bekijk Pihole</a>
             </div>
             <div class="project-card">
                 <h3>Andere Projecten</h3>
