--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" href="logo.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Matisse, Bollen, mbits, computer, IT, server, ikweetnietwatiknueigenlijkwiltestendusikdoemaarwatmetmijnbrowser, homeserver">
     <title>Matisse zijn website</title>
     <style>
         body {
